--- a/Code/DeliciousCatering/pom.xml
+++ b/Code/DeliciousCatering/pom.xml
@@ -25,6 +25,11 @@
             <version>3.1.0</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.14</version>
+        </dependency>
     </dependencies>
     
     <build>
